<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/nav_map"
        android:title="@string/nav_Map" />

    <item
        android:id="@+id/navigation_ticket"
        android:icon="@drawable/nav_ticket"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/nav_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more__1__2"
        android:title="@string/nav_my_jobs" />
</menu>