<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cq_mobile.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.cq_mobile.ui.map.MapFragment"
        android:label="@string/nav_Map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.cq_mobile.ui.MoreInFragment.MoreFragment"
        android:label="@string/nav_my_jobs"
        tools:layout="@layout/fragment_more" />


    <fragment
        android:id="@+id/navigation_ticket"
        android:name="com.example.cq_mobile.ui.ticket.TicketFragment"
        android:label="Ticket"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.cq_mobile.ui.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />

</navigation>